--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "contactmanager",
   "version": "0.1.0",
+  "homepage": "https://devmahmud.github.io/ContactManager",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -16,6 +18,7 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
